--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -44,20 +44,19 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
 <body class="home {% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}" style="padding-right: 0;">
 
   {% unless handle contains 'pay-invoice' or handle contains 'cb' or handle contains 'thank-you' or handle contains 'kalani' %}
-  <div class="text-center site-banner full-w row-eq-height hidden-xs minor-h-pads" style="background-color: #ea235b !important;">
-    <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.
-      Be a Valentine, show your love with <span style="border-bottom: 1px solid black;">15% off any pair</span>.
-      <small>use code:</small> <code class="blue" style="background-color: black;"><strong>valentine</strong></code>
-    </p>
-    <button class="close-box bigs" type="button" data-dismiss="modal" aria-hidden="true">×</button>
-  </div>
+  <!-- <div class="text&#45;center site&#45;banner full&#45;w row&#45;eq&#45;height hidden&#45;xs minor&#45;h&#45;pads" style="background&#45;color: #1fa7d6 !important; box&#45;shadow: 0 5px 5px &#45;7px #333131;"> -->
+  <!--   <p class="v&#45;center"> -->
+  <!--     <strong>Free Returns</strong> / <strong>Free Replacements</strong> on all purchases. -->
+  <!--   </p> -->
+  <!--   <button class="close&#45;box bigs" type="button" data&#45;dismiss="modal" aria&#45;hidden="true">×</button> -->
+  <!-- </div> -->
   
-  <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads" style="background-color: #ea235b !important;">
-    <small>
-      <p class="v-center" style="margin-top: 12px; font-family: sans-serif; color: black;"><strong>Valentine's Day Sale!</strong></p>
-    </small>
-    <button type="button" class="close-box mobes" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -25px;">×</button>
-  </div>
+  <!-- <div class="text&#45;center site&#45;banner full&#45;w row&#45;eq&#45;height visible&#45;xs minor&#45;h&#45;pads" style="background&#45;color: #ea235b !important;"> -->
+  <!--   <small> -->
+  <!--     <p class="v&#45;center" style="margin&#45;top: 12px; font&#45;family: sans&#45;serif; color: black;"><strong>Valentine's Day Sale!</strong></p> -->
+  <!--   </small> -->
+  <!--   <button type="button" class="close&#45;box mobes" data&#45;dismiss="modal" aria&#45;hidden="true" style="float: right; margin&#45;top: &#45;25px;">×</button> -->
+  <!-- </div> -->
   <!-- <div class="text&#45;center site&#45;banner full&#45;w row&#45;eq&#45;height visible&#45;xs minor&#45;h&#45;pads"> -->
   <!--   <small> -->
     <!--     <p class="v&#45;center"><strong>Fello's Summer Sale</strong> 10% OFF</p> -->
