--- a/snippets/social-links.liquid
+++ b/snippets/social-links.liquid
@@ -5,7 +5,7 @@
       <i class="fa fa-facebook"></i>
   	</a>
   {% endif %}
-  {% if settings.social_twitter_link != blank %}
+  {% if false %}
     <a href="{{ settings.social_twitter_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Twitter' }}">
       <i class="fa fa-twitter"></i>
     </a>
@@ -20,7 +20,7 @@
       <i class="fa fa-instagram"></i>
   	</a>
   {% endif %}
-  {% if settings.social_pinterest_link != blank %}
+  {% if false %}
     <a href="{{ settings.social_pinterest_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Pinterest' }}">
       <i class="fa fa-pinterest"></i>
     </a>
